# smol-course

./: pyproject.toml
1_instruction_tuning/notebooks/: chat_templates_example.ipynb  sft_finetuning_example.ipynb
2_preference_alignment/notebooks/: dpo_finetuning_example.ipynb  orpo_finetuning_example.ipynb
3_parameter_efficient_finetuning/notebooks/: finetune_sft_peft.ipynb  load_lora_adapter.ipynb
4_evaluation/notebooks/: lighteval_evaluate_and_analyse_your_LLM.ipynb
4_evaluation/project/: evaluation_task.py  generate_dataset.py
5_vision_language_models/notebooks/: vlm_sft_sample.ipynb  vlm_usage_sample.ipynb
6_synthetic_datasets/notebooks/: instruction_sft_dataset.ipynb  preference_dpo_dataset.ipynb
8_agents/notebooks/: agents.ipynb
pt-br/4_evaluation/project/: generate_dataset.py
