[project]
name = "smol-course"
version = "0.1.0"
description = "a smol course on llms"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "datasets>=3.1.0",
    "huggingface-hub>=0.26.3",
    "lighteval>=0.6.2",
    "ipywidgets>=8.1.5",
    "transformers>=4.46.3",
    "trl>=0.12.1",
    "bitsandbytes>=0.45.0",
    "argilla>=2.8.0",
    "distilabel>=1.5.3",
    "jupyterlab>=4.4.0",
    "rich>=13.9.4",
    "tqdm>=4.67.1",
]
